manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "frontend-react-voting"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "frontend-react-voting"
  template:
    metadata:
      labels:
        app: "frontend-react-voting"
    spec:
      containers:
        - name: "frontend-react-voting"
          # name doesnt matter since we will replace it with image substitution in actions
          image: "srahul3.azurecr.io/frontend-react-voting"
          ports:
            - containerPort: 3000
