manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "frontend-react-voting"
    annotations:    
        service.beta.kubernetes.io/azure-load-balancer-internal: "false"
    labels:
        app: "frontend-react-voting"
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
    selector:
        app: "frontend-react-voting"
