manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-fe
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - secretName: nginx-cert
      hosts:
        - srahul3-awg-aks.centralindia.cloudapp.azure.com
        
  rules:
  - host: srahul3-awg-aks.centralindia.cloudapp.azure.com
    http:
      paths:
      # home
      - path: /
        pathType: Exact
        backend:
          service:
            name: frontend-react-voting
            port:
              number: 80
      # If no rules above match, Proxy to backend-one
      - path: /
        pathType: Prefix
        backend:
          serviceName: frontend-react-voting
          servicePort: 80
