manifests/ingress2.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-fe
  annotations:
    # kubernetes.io/ingress.class: azure/application-gateway
    kubernetes.io/ingress.class: nginx
    # appgw.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:  
  rules:
  - host: $dns_name1
    http:
      paths:
      # home
      - path: /
        pathType: Exact
        backend:
          service:
            name: frontend-react-voting
            port:
              number: 80
      # If no rules above match, Proxy to backend-one
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend-react-voting
            port:
              number: 80
